--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 4.2.4
+Date: 2021-08-31
+  Functions:
+    - ?
+  Plugins:
+    - Babelfish: Translated fully for de, en, ja.
+---------------------------------------------------------------------------------------------------
 Version: 4.2.3
 Date: 2021-08-30
   Functions:
