--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,12 @@ Date: 2021-09-02
   Functions:
     - Breaking change! Renamed Set.from_values to Set.of_values.
     - Added PluginManagerLite.manage_version
+    - Added Tool.cross_require
+    - Added Table.popmetatable
+    - Added Data.Sprite.brute_scale
+  Plugins:
+    - Fixed on_ticked_action failing to raise events for actions
+      enqueued in inverse temporal order.
 ---------------------------------------------------------------------------------------------------
 Version: 4.2.4
 Date: 2021-09-01
