--- a/changelog.txt
+++ b/changelog.txt
@@ -3,10 +3,15 @@ Version: 4.2.5
 Date: 2021-09-02
   Functions:
     - Breaking change! Renamed Set.from_values to Set.of_values.
+    - Breaking change! Renamed Set.from_keys to Set.of_keys.
     - Added PluginManagerLite.manage_version
     - Added Tool.cross_require
     - Added Table.popmetatable
     - Added Data.Sprite.brute_scale
+    - Added Entity.destroy
+    - Added Player.try_swap_character
+    - New module Surface
+    - Added Surface.destroy_entities_filtered
   Plugins:
     - Fixed on_ticked_action failing to raise events for actions
       enqueued in inverse temporal order.
